# khadas_npu_detect_age

./: README.md
detect_age/: makefile.linux  makefile.target_name
model_test_code/bin_r_cv4/: detect_inception
test_program/: CMakeCache.txt  CMakeLists.txt  Makefile  clean.sh  cmake_install.cmake  genderh5.nb  main  main.c  make_run.sh
